--- a/dotNet5783_6686_9339/PL/Prudoct/ProductWindow.xaml
+++ b/dotNet5783_6686_9339/PL/Prudoct/ProductWindow.xaml
@@ -1,13 +1,12 @@
-﻿<Window x:Class="PL.MainWindow"
+﻿<Window x:Class="PL.Prudoct.ProductWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PL"
+        xmlns:local="clr-namespace:PL.Prudoct"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="ProductWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Center" VerticalAlignment="Center" Height="75" Width="198" Click="Button_Click"/>
-
+        
     </Grid>
 </Window>
