--- a/dotNet5783_6686_9339/PL/Prudoct/ProductListWindow.xaml
+++ b/dotNet5783_6686_9339/PL/Prudoct/ProductListWindow.xaml
@@ -10,9 +10,9 @@
     <Grid>
         <Grid Name="MainGrid">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="772*"/>
+                <ColumnDefinition Width="771*"/>
                 <ColumnDefinition Width="19*"/>
-                <ColumnDefinition Width="7*"/>
+                <ColumnDefinition Width="6.991"/>
                 <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -36,7 +36,7 @@
                 </ListView.View>
             </ListView>
             <Button Content="Add new Product" HorizontalAlignment="Left" Margin="40,427,0,0" Grid.Row="1" VerticalAlignment="Top" Height="45" Width="120" Click="Button_Click_1"/>
-           
+
         </Grid>
 
 
