--- a/dotNet5783_6686_9339/PL/Prudoct/AddProductWindow.xaml
+++ b/dotNet5783_6686_9339/PL/Prudoct/AddProductWindow.xaml
@@ -9,13 +9,13 @@
     <Grid>
         <Label x:Name="Id" Content="ID : " HorizontalAlignment="Left" Margin="86,60,0,0" VerticalAlignment="Top" FontSize="22"/>
         <Label x:Name="Price" Content="Price :" HorizontalAlignment="Left" Margin="56,151,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label Content="Caregort :" HorizontalAlignment="Left" Margin="14,198,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label Content="Category :" HorizontalAlignment="Left" Margin="14,198,0,0" VerticalAlignment="Top" FontSize="24"/>
         <Label x:Name="InStock" Content="In Stock :" HorizontalAlignment="Left" Margin="23,257,0,0" VerticalAlignment="Top" FontSize="24"/>
         <TextBox x:Name="InsertId" HorizontalAlignment="Left" Margin="163,67,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="136" FontSize="18" Height="26"/>
         <TextBox x:Name="InsertName" HorizontalAlignment="Left" Margin="163,116,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="136" FontSize="16"/>
         <TextBox x:Name="InsertInStock" HorizontalAlignment="Left" Margin="163,276,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="136" FontSize="16"/>
         <TextBox x:Name="InsertPrice" HorizontalAlignment="Left" Margin="163,163,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="136" FontSize="16"/>
-        <Button x:Name="ItemAdd" Content="conpirm" HorizontalAlignment="Left" Margin="309,341,0,0" VerticalAlignment="Top" Height="56" Width="149" FontSize="24" Click="ItemAdd_Click"/>
+        <Button x:Name="ItemAdd" Content="confirm" HorizontalAlignment="Left" Margin="309,341,0,0" VerticalAlignment="Top" Height="56" Width="149" FontSize="24" Click="ItemAdd_Click"/>
         <Label x:Name="Name" Content="Name :" HorizontalAlignment="Left" Margin="43,104,0,0" VerticalAlignment="Top" FontSize="24"/>
         <ListBox x:Name="InsertCategory" Margin="163,213,482,169">
             <ComboBox x:Name="CategorySelct" Width="121" Height="23" SelectionChanged="CategorySelct_SelectionChanged"/>
