--- a/dotNet5783_6686_9339/PL/Prudoct/AddProductWindow.xaml
+++ b/dotNet5783_6686_9339/PL/Prudoct/AddProductWindow.xaml
@@ -15,7 +15,7 @@
         <TextBox x:Name="InsertName" HorizontalAlignment="Left" Margin="163,116,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="136" FontSize="16"/>
         <TextBox x:Name="InsertInStock" HorizontalAlignment="Left" Margin="163,276,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="136" FontSize="16"/>
         <TextBox x:Name="InsertPrice" HorizontalAlignment="Left" Margin="163,163,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="136" FontSize="16"/>
-        <Button x:Name="ItemAdd" Content="confirm" HorizontalAlignment="Left" Margin="309,341,0,0" VerticalAlignment="Top" Height="56" Width="149" FontSize="24" Click="ItemAdd_Click"/>
+        <Button x:Name="Confirm" Content="confirm" HorizontalAlignment="Left" Margin="309,341,0,0" VerticalAlignment="Top" Height="56" Width="149" FontSize="24" Click="ConfirmAdd_Click"/>
         <Label x:Name="Name" Content="Name :" HorizontalAlignment="Left" Margin="43,104,0,0" VerticalAlignment="Top" FontSize="24"/>
         <ListBox x:Name="InsertCategory" Margin="163,213,482,169">
             <ComboBox x:Name="CategorySelct" Width="121" Height="23" SelectionChanged="CategorySelct_SelectionChanged"/>
