--- a/dotNet5783_6686_9339/PL/Prudoct/AddProductWindow.xaml
+++ b/dotNet5783_6686_9339/PL/Prudoct/AddProductWindow.xaml
@@ -20,6 +20,7 @@
         <ListBox x:Name="InsertCategory" Margin="163,213,482,169">
             <ComboBox x:Name="CategorySelct" Width="121" Height="23" SelectionChanged="CategorySelct_SelectionChanged"/>
         </ListBox>
+        <Button x:Name="ConfirmUpdate" Content="Confirm" HorizontalAlignment="Left" Margin="163,341,0,0" VerticalAlignment="Top" Height="48" Width="108" FontSize="22" Click ="ConfirmUpdate_Click"/>
 
     </Grid>
 </Window>
