--- a/dotNet5783_6686_9339/PL/Prudoct/ProductWindow.xaml
+++ b/dotNet5783_6686_9339/PL/Prudoct/ProductWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="PL.Prudoct.AddProductWindow"
+﻿<Window x:Class="PL.Prudoct.ProductWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL.Prudoct"
         mc:Ignorable="d"
-        Title="AddProductWindow" Height="450" Width="800">
+        Title="ProductWindow" Height="450" Width="800">
     <Grid>
         <Label x:Name="Id" Content="ID : " HorizontalAlignment="Left" Margin="86,60,0,0" VerticalAlignment="Top" FontSize="22"/>
         <Label x:Name="Price" Content="Price :" HorizontalAlignment="Left" Margin="56,151,0,0" VerticalAlignment="Top" FontSize="24"/>
