--- a/dotNet5783_6686_9339/PL/Prudoct/ProductWindow.xaml
+++ b/dotNet5783_6686_9339/PL/Prudoct/ProductWindow.xaml
@@ -7,6 +7,12 @@
         mc:Ignorable="d"
         Title="ProductWindow" Height="450" Width="800">
     <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="Black"/>
+                <GradientStop Color="White" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Label x:Name="Id" Content="ID : " HorizontalAlignment="Left" Margin="86,60,0,0" VerticalAlignment="Top" FontSize="22"/>
         <Label x:Name="Price" Content="Price :" HorizontalAlignment="Left" Margin="56,151,0,0" VerticalAlignment="Top" FontSize="24"/>
         <Label Content="Category :" HorizontalAlignment="Left" Margin="14,198,0,0" VerticalAlignment="Top" FontSize="24"/>
