--- a/dotNet5783_6686_9339/PL/MainWindow.xaml
+++ b/dotNet5783_6686_9339/PL/MainWindow.xaml
@@ -10,7 +10,7 @@
         <Grid.Background>
             <ImageBrush ImageSource="/logo.jpg"/>
         </Grid.Background>
-        <Button Content="Welcome to the shop" HorizontalAlignment="Left" VerticalAlignment="Top" Height="59" Width="450" Click="Button_Click" FontWeight="Bold" FontSize="22" RenderTransformOrigin="2.056,3.056" Margin="234,246,0,0" BorderBrush="{x:Null}" Foreground="#FFCBCBD0">
+        <Button x:Name="admin" Content="staff access" HorizontalAlignment="Left" VerticalAlignment="Top" Height="59" Width="450" Click="adminButton_Click" FontWeight="Bold" FontSize="22" RenderTransformOrigin="2.056,3.056" Margin="157,82,0,0" BorderBrush="{x:Null}" Foreground="#FFCBCBD0">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black"/>
@@ -18,5 +18,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
+        <Button x:Name="NewOrder" Content="new order" HorizontalAlignment="Left" Margin="202,202,0,0" VerticalAlignment="Top" Width="344" Height="73" Click="NewOrder_Click"/>
+        <Button x:Name="Tracking" Content="order tracking" HorizontalAlignment="Left" Margin="200,314,0,0" VerticalAlignment="Top" Height="79" Width="346" Click="Tracking_Click"/>
     </Grid>
 </Window>
