--- a/dotNet5783_6686_9339/PL/Order/OrderUpdateAdmineWindow.xaml
+++ b/dotNet5783_6686_9339/PL/Order/OrderUpdateAdmineWindow.xaml
@@ -32,6 +32,7 @@
         <TextBox x:Name="DateOrder" HorizontalAlignment="Left" Margin="151,262,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="DateSipe" HorizontalAlignment="Left" Margin="145,297,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="DateDelivery" HorizontalAlignment="Left" Margin="146,329,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Back" HorizontalAlignment="Left" Height="45" Margin="550,363,0,0" VerticalAlignment="Top" Width="125" FontSize="20" Background="{x:Null}" Click="Button_Click"/>
 
     </Grid>
 </Window>
