--- a/dotNet5783_6686_9339/PL/MainWindow.xaml
+++ b/dotNet5783_6686_9339/PL/MainWindow.xaml
@@ -6,20 +6,21 @@
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-	<Grid>
-		<Grid.Background>
-			<ImageBrush ImageSource="/5bcac630-8e8f-4262-9938-83ef4947ad98.jpg"/>
-		</Grid.Background>
-		<Button x:Name="admin" Content="-Admin" HorizontalAlignment="Left" VerticalAlignment="Top" Height="59" Width="344" Click="adminButton_Click" FontWeight="Bold" FontSize="22" RenderTransformOrigin="2.056,3.056" Margin="0,79,0,0" BorderBrush="{x:Null}" Foreground="#FF0D0D42" Background="{x:Null}"/>
-		<Button x:Name="NewOrder" Content="-New Order" HorizontalAlignment="Left" Margin="0,143,0,0" VerticalAlignment="Top" Width="344" Height="73" Click="NewOrder_Click" Background="{x:Null}" Foreground="#FF172956" FontSize="22" FontWeight="Bold" BorderBrush="{x:Null}"/>
-		<Button x:Name="Tracking" Content="-Order Track" HorizontalAlignment="Left" Margin="0,217,0,0" VerticalAlignment="Top" Height="73" Width="344" Click="Tracking_Click" Background="{x:Null}" FontWeight="Bold" Foreground="#FF180F42" FontSize="22" BorderBrush="{x:Null}"/>
-		<TextBlock x:Name="wlc_msg" HorizontalAlignment="Center" Margin="0,367,0,0" TextWrapping="Wrap" Text="Welcome to the store" VerticalAlignment="Top" FontSize="36" FontWeight="Bold" RenderTransformOrigin="0.602,0.591">
-			<TextBlock.Foreground>
-				<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-					<GradientStop Color="Black"/>
-					<GradientStop Color="#FF38FAFC" Offset="1"/>
-				</LinearGradientBrush>
-			</TextBlock.Foreground>
-		</TextBlock>
-	</Grid>
+    <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="/5bcac630-8e8f-4262-9938-83ef4947ad98.jpg"/>
+        </Grid.Background>
+        <Button x:Name="admin" Content="-Admin" HorizontalAlignment="Left" VerticalAlignment="Top" Height="59" Width="344" Click="adminButton_Click" FontWeight="Bold" FontSize="22" RenderTransformOrigin="2.056,3.056" Margin="0,79,0,0" BorderBrush="{x:Null}" Foreground="#FF0D0D42" Background="{x:Null}"/>
+        <Button x:Name="NewOrder" Content="-New Order" HorizontalAlignment="Left" Margin="0,143,0,0" VerticalAlignment="Top" Width="344" Height="73" Click="NewOrder_Click" Background="{x:Null}" Foreground="#FF172956" FontSize="22" FontWeight="Bold" BorderBrush="{x:Null}"/>
+
+        <TextBlock x:Name="wlc_msg" HorizontalAlignment="Center" Margin="0,367,0,0" TextWrapping="Wrap" Text="Welcome to the store" VerticalAlignment="Top" FontSize="36" FontWeight="Bold" RenderTransformOrigin="0.602,0.591">
+            <TextBlock.Foreground>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FF38FAFC" Offset="1"/>
+                </LinearGradientBrush>
+            </TextBlock.Foreground>
+        </TextBlock>
+        <TextBox x:Name="Tracing" HorizontalAlignment="Left" Margin="88,221,0,0" TextWrapping="Wrap" Text="insert id" VerticalAlignment="Top" Width="168" Height="49" FontSize="20" KeyDown="Tracing_KeyDown"/>
+    </Grid>
 </Window>
