--- a/dotNet5783_6686_9339/PL/Order/NewOrderWindow.xaml
+++ b/dotNet5783_6686_9339/PL/Order/NewOrderWindow.xaml
@@ -37,7 +37,7 @@
 
             </ListView.View>
         </ListView>-->
-        <Button x:Name="ConfirmOrder" Content="Confirm order" HorizontalAlignment="Left" Margin="614,10,0,0" VerticalAlignment="Top" Height="55" Width="154" FontSize="20"/>
+        <Button x:Name="ConfirmOrder" Content="Confirm order" HorizontalAlignment="Left" Margin="614,10,0,0" VerticalAlignment="Top" Height="55" Width="154" FontSize="20" Click="ConfirmOrder_Click"/>
         <ComboBox x:Name="CategorySelct" HorizontalAlignment="Left" Margin="306,16,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="CategorySelct_SelectionChanged"/>
         <Button x:Name="BackToMainWindow" Content="Back" HorizontalAlignment="Left" Margin="27,349,0,0" VerticalAlignment="Top" Height="52" Width="92" FontSize="16" Click="BackToMainWindow_Click"/>
         <ListView x:Name="ProductIteamListView" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="202,51,259,33">
