--- a/dotNet5783_6686_9339/PL/Cart/CartWindow.xaml
+++ b/dotNet5783_6686_9339/PL/Cart/CartWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="CartWindow" Height="450" Width="800">
     <Grid>
-        <ListView x:Name="CartOrderIteamListView" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="489,3,0,83">
+        <ListView x:Name="CartOrderIteamListView" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="489,3,10,83">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="update" Width="65">
@@ -21,16 +21,16 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Label Content="Name : " HorizontalAlignment="Left" Margin="80,72,0,0" VerticalAlignment="Top" Height="43" Width="92" FontSize="18"/>
+        <Label Content="Name : " HorizontalAlignment="Left" Margin="85,71,0,0" VerticalAlignment="Top" Height="43" Width="92" FontSize="18"/>
         <Label Content="Adress :" HorizontalAlignment="Left" Margin="78,123,0,0" VerticalAlignment="Top" Height="55" Width="109" FontSize="18"/>
-        <Label Content="Email :" HorizontalAlignment="Left" Margin="78,167,0,0" VerticalAlignment="Top" Height="51" Width="96" FontSize="18"/>
-        <Label Content="total payment :" HorizontalAlignment="Left" Height="52" Margin="498,370,0,0" VerticalAlignment="Top" Width="136" FontSize="18"/>
-        <TextBox x:Name="insertName" HorizontalAlignment="Left" Margin="169,80,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="InsertAdress" HorizontalAlignment="Left" Margin="163,128,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="InsertEmail" HorizontalAlignment="Left" Margin="170,178,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBlock x:Name="TotalPayment" HorizontalAlignment="Left" Margin="646,374,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="38" Width="127" FontSize="20"/>
-        <Button Content="close" HorizontalAlignment="Left" Height="47" Margin="384,377,0,0" VerticalAlignment="Top" Width="93" FontSize="20"/>
-        <Button Content="Button" HorizontalAlignment="Left" Height="50" Margin="110,220,0,0" VerticalAlignment="Top" Width="136"/>
+        <Label Content="Email :" HorizontalAlignment="Left" Margin="87,168,0,0" VerticalAlignment="Top" Height="51" Width="96" FontSize="18"/>
+        <Label Content="total payment :" HorizontalAlignment="Left" Height="52" Margin="508,354,0,0" VerticalAlignment="Top" Width="136" FontSize="18"/>
+        <TextBox x:Name="insertName" HorizontalAlignment="Left" Margin="163,79,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="InsertAdress" HorizontalAlignment="Left" Margin="163,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="InsertEmail" HorizontalAlignment="Left" Margin="163,177,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBlock x:Name="TotalPayment" HorizontalAlignment="Left" Margin="656,358,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="38" Width="127" FontSize="20"/>
+        <Button Content="close" HorizontalAlignment="Left" Height="47" Margin="18,370,0,0" VerticalAlignment="Top" Width="93" FontSize="20" Background="{x:Null}"/>
+        <Button x:Name="ConfirmCart" Content="Confirm" HorizontalAlignment="Left" Height="50" Margin="110,220,0,0" VerticalAlignment="Top" Width="136" FontSize="20" Background="{x:Null}" Click="ConfirmCart_Click"/>
 
     </Grid>
 </Window>
