--- a/dotNet5783_6686_9339/PL/Order/OrderTrackWindow.xaml
+++ b/dotNet5783_6686_9339/PL/Order/OrderTrackWindow.xaml
@@ -6,8 +6,24 @@
         xmlns:local="clr-namespace:PL.Order"
         mc:Ignorable="d"
         Title="OrderTrackWindow" Height="450" Width="800">
+    <Window.Resources>
+        <Style x:Key = "TriggerStyle" TargetType = "Button">
+            <Setter Property = "Foreground" Value = "Black" />
+            <Style.Triggers>
+                <Trigger Property = "IsMouseOver" Value = "True">
+                    <Setter Property = "Foreground" Value = "DarkBlue" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <Grid>
-        <Button x:Name="BackButton" Content="Back" HorizontalAlignment="Left" Margin="264,73,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="22" Click="BackButton_Click"/>
+        <Grid.Background>
+            <ImageBrush ImageSource="/Order/5bcac630-8e8f-4262-9938-83ef4947ad98.jpg"/>
+        </Grid.Background>
+        <Button Content="Home" HorizontalAlignment="Left" Margin="10,360,0,0" VerticalAlignment="Top" Height="45" Width="96" FontSize="18" Click="Button_Click" Style = "{StaticResource TriggerStyle}" />
+        <TextBlock Name="OrderTackingText" HorizontalAlignment="Left" Margin="236,75,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="231" Width="302" FontSize="22" Foreground="#FF090101" FontWeight="Bold" />
+        <Button Content="To See Order" HorizontalAlignment="Left" Margin="296,330,0,0" VerticalAlignment="Top" Width="182" Height="45" FontSize="18" Click="Button_Click_1" Style = "{StaticResource TriggerStyle}" />
 
-    </Grid>
+
+        </Grid>
 </Window>
